2008-11-28  Neil Roberts  <neil@linux.intel.com>

	* tests/conform/test-mesh-mutability.c:
	* tests/conform/test-mesh-interleved.c:
	* tests/conform/test-mesh-contiguous.c: Remove the idle source
	after the test is complete so that it won't interfere with other
	tests.

2008-11-26  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-group.c:
	(clutter_group_real_raise), (clutter_group_real_lower): Repaint
	the Group on raise and lower.

2008-11-26  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gl/cogl-texture.c (cogl_texture_rectangle): Fixed
	the test for whether to use hardware tiling. Previously it assumed
	that texture coordinates are in increasing order but this is not
	the case since bug 1057 was fixed. The texture coordinates are now
	sorted later. It also allowed negative coordinates which doesn't
	make sense if the texture has waste.

2008-11-25  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac: Remove stray dependency on gdk-pixbuf-xlib; we
	don't use the xlib specific API anymore. (thanks to Matthias
	Clasen)

2008-11-25  Neil Roberts  <neil@linux.intel.com>

	Bug 1299 - clutter_score_remove will segmentation fault if
	timelines are more than 52 and continue to remove them

	* clutter/clutter-score.c (traverse_children): Don't destroy the
	entry in the handler for REMOVE_BY_ID. It will be removed again
	anyway in the call to g_node_traverse. This was causing a
	crash. Thanks to zhangwei for spotting.

2008-11-24  Neil Roberts  <neil@linux.intel.com>

	Add a wrapper library to help testing without NPOTs.

	* tests/tools/Makefile.am: Optionally build the
	libdisable-npots.la library depending on whether libdl was
	detected in the configure script. A helper script is also
	generated to setup the LD_PRELOAD.

	* tests/conform/Makefile.am: There are now two versions of the
	test-report and full-report rules. test-report-normal is the same
	as before and test-report-disable-npots runs the tests with the